--- a/public/registerbooks.html
+++ b/public/registerbooks.html
@@ -8,7 +8,7 @@
  
  			 <input type="hidden"  id="sender" name="sender" value="<%= sender_id %>">
   			<input type="submit" value="Submit"> 
-</div>s
+</div>
   </form>
 	</body>
 </html>
